Attempted to fix display of wide images on mobile.

--- a/css/default.css
+++ b/css/default.css
@@ -53,7 +53,7 @@ table {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    overflow: auto;
+    overflow: scroll;
     padding-top: 7px;
     padding-bottom: 7px;
 }
